hoàn thành SupplierController và giao diện + thêm thay đổi vào model, Bus, Dao, Database sql. thay thế toàn bộ .isBlank() thành .isEmpty() ở những file nào có nó (do java8 ko hỗ trợ .isBlank)